--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/styling/reset.css">
     <link rel="stylesheet" href="../src/styling/style.css">
-    <title>React App</title>
+    <title>Aura Academy</title>
   </head>
   <body>
     <div id="root"></div>
